[workspace]
resolver = "2"

members = [
    "os/kernel",
    "os/application/about",
    "os/application/hello",
    "os/application/helloc",
    "os/application/shell",
    "os/application/uptime",
    "os/application/date",
    "os/application/ls",
    "os/application/heaptest",
    "os/application/ntest",
    "os/application/ibstat/mlx4",
    "os/application/rdma/mlx4"
]

# [profile.release]
# debug = true