cargo-features = ["edition2024"]

[package]
edition = "2024"
name = "kernel"
version = "0.1.0"
authors = ["Michael Schöttner <michael.schoettner@hhu.de>, Fabian Ruhland <ruhland@hhu.de>"]
build = "build.rs"

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
# Local dependencies
graphic = { path = "../library/graphic" }
stream = { path = "../library/stream" }
syscall = { path = "../library/syscall" }

# External depencies
spin = "0.9.8"
x86_64 = "0.15.1"
linked_list_allocator = { version = "0.10.5", features = ["alloc_ref"] }
multiboot2 = "0.23.1"
ps2 = "0.2.0"
pc-keyboard = "0.8.0"
anstyle-parse = "0.2.6"
chrono = { version = "0.4.38", default-features = false, features = ["alloc"] }
nolock = { version = "0.4.1", default-features = false, features = ["queues"] }
acpi = "5.1.0"
x2apic = "0.4.3"
raw-cpuid = "11.2.0"
smallmap = "1.4.2"
uefi-raw = "0.9.0"
uefi = { version = "0.33.0", features = ["alloc"] }
log = "0.4.22"
goblin = { version = "0.9.2", default-features = false, features = ["elf32", "elf64", "endian_fd"]}
tar-no-std = "0.3.2"
pci_types = "0.10.0"
bitflags = "2.6.0"
smoltcp = { version = "0.11.0", default-features = false, features = ["alloc", "log", "medium-ethernet", "proto-ipv4", "socket-udp"] }

[build-dependencies]
built = { version = "0.7.5", features = ["chrono", "git2"] }
