[package]
edition = "2024"
name = "kernel"
version = "0.1.0"
authors = ["Michael Schöttner <michael.schoettner@hhu.de>, Fabian Ruhland <ruhland@hhu.de>"]
build = "build.rs"

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
# Local dependencies
graphic = { path = "../library/graphic" }
stream = { path = "../library/stream" }
syscall = { path = "../library/syscall" }
naming = { path = "../library/naming" }
terminal = { path = "../library/terminal" }
drawer = { path = "../library/drawer" }
system_info = { path = "../library/system_info" }
input = { path = "../library/input" }
logger = { path = "../library/logger" }


# External depencies
spin = "0.9.8"
x86_64 = "0.15.2"
linked_list_allocator = { version = "0.10.5", features = ["alloc_ref"] }
multiboot2 = "0.23.1"
ps2 = { git = "https://github.com/lnx00/ps2-rs.git" }
pc-keyboard = "0.8.0"
anstyle-parse = "0.2.6"
chrono = { version = "0.4.40", default-features = false, features = ["alloc"] }
nolock = { version = "0.4.1", default-features = false, features = ["queues"] }
acpi = "5.2.0"
x2apic = "0.5.0"
raw-cpuid = "11.2.0"
smallmap = "1.4.2"
uefi-raw = "0.10.0"
uefi = { version = "0.34.1", features = ["alloc"] }
log = "0.4.26"
goblin = { version = "0.9.3", default-features = false, features = ["elf32", "elf64", "endian_fd"]}
tar-no-std = "0.3.3"
pci_types = "0.10.0"
bitflags = "2.9.0"
smoltcp = { version = "0.12.0", default-features = false, features = ["alloc", "log", "medium-ethernet", "proto-ipv4", "socket-udp"] }
mbrs = { version = "0.3.1", default-features = false, features = ["no-std"] }
num_enum = { version = "0.7.3", default-features = false }

[build-dependencies]
built = { version = "0.7.7", features = ["chrono", "git2"] }
