[package]
edition = "2021"
name = "date"
version = "0.1.0"
authors = ["Michael Schöttner <michael.schoettner@hhu.de>, Fabian Ruhland <ruhland@hhu.de>"]

[lib]
crate-type = ["staticlib"]
path = "src/date.rs"

[dependencies]
# Local dependencies
runtime = { path = "../../library/runtime" }
io = { path = "../../library/io" }
time = { path = "../../library/time" }

chrono = { version = "0.4.34", default-features = false, features = ["alloc"] }