[package]
edition = "2021"
name = "drawer"
version = "0.1.0"
authors = ["Artur Herdt"]

[lib]
crate-type = ["staticlib"]
path = "src/drawer.rs"

[dependencies]
# Local dependencies
runtime = { path = "../../library/runtime" }
concurrent = { path = "../../library/concurrent" }
drawutil = { path = "../../library/drawutil" }