[package]
edition = "2021"
name = "hello"
version = "0.1.0"
authors = ["Michael Schöttner <michael.schoettner@hhu.de>, Fabian Ruhland <ruhland@hhu.de>"]

[lib]
crate-type = ["staticlib"]
path = "src/hello.rs"

[dependencies]
# Local dependencies
syscall = { path = "../../library/syscall" }
thread = { path = "../../library/thread" }

# External dependencies
spin = "0.9.8"