cargo-features = ["edition2024"]

[package]
edition = "2024"
name = "helloc"
version = "0.1.0"
authors = ["Michael Schöttner <michael.schoettner@hhu.de>, Fabian Ruhland <ruhland@hhu.de>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
# Local dependencies
runtime = { path = "../../library/runtime" }
libc = { path = "../../library/libc" }