[package]
edition = "2024"
name = "keytest"
version = "0.1.0"
authors = ["Sebastian Keller <sebastian.keller@hhu.de>"]

[lib]
crate-type = ["staticlib"]
path = "src/keytest.rs"

[dependencies]
# Local dependencies
runtime = { path = "../../library/runtime" }
terminal = { path = "../../library/terminal" }
