[package]
edition = "2024"
name = "ls"
version = "0.1.0"
authors = ["Michael Schöttner <michael.schoettner@hhu.de>, Fabian Ruhland <ruhland@hhu.de>"]

[lib]
crate-type = ["staticlib"]
path = "src/ls.rs"

[dependencies]
# Local dependencies
terminal = { path = "../../library/terminal" }
runtime = { path = "../../library/runtime" }
naming = { path = "../../library/naming" }