[package]
name = "nc"
version = "0.1.0"
edition = "2024"
authors = ["Niklas Sombert <niklas.sombert@uni-duesseldorf.de"]

[lib]
crate-type = ["staticlib"]
path = "src/nc.rs"
test = false
doctest = false
bench = false

[dependencies]
# Local dependencies
runtime = { path = "../../library/runtime" }
network = { path = "../../library/network" }
terminal = { path = "../../library/terminal" }
