[package]
edition = "2024"
name = "peanut-gb"
version = "1.3.0"
authors = ["Mahyar Koshkouei (deltabeard), Fabian Ruhland <ruhland@hhu.de>"]
description = "A very fast and portable Game Boy (DMG) emulator single header library written in C99. Original implementation by Mahyar Koshkouei (deltabeard), ported to D3OS by Fabian Ruhland."
license = "MIT"

[lib]
crate-type = ["staticlib"]
path = "src/peanut-gb.rs"
test = false
doctest = false
bench = false

[dependencies]
# Local dependencies
runtime = { path = "../../library/runtime" }
libc = { path = "../../library/libc" }
time = { path = "../../library/time" }
concurrent = { path = "../../library/concurrent" }
graphic = { path = "../../library/graphic" }
terminal = { path = "../../library/terminal" }
naming = { path = "../../library/naming" }

# External dependencies
spin = "0.10.0"
chrono = { version = "0.4.42", default-features = false, features = ["alloc"] }
pc-keyboard = "0.8.0"