[package]
edition = "2024"
name = "shell"
version = "0.1.0"
authors = ["Sebastian Keller <sebastian.keller@hhu.de>"]

[lib]
crate-type = ["staticlib"]
path = "src/shell.rs"
test = false
doctest = false
bench = false

[dependencies]
# Local dependencies
runtime = { path = "../../library/runtime" }
terminal = { path = "../../library/terminal" }
concurrent = { path = "../../library/concurrent" }
naming = { path = "../../library/naming" }
syscall = { path = "../../library/syscall" }
logger = { path = "../../library/logger" }
globals = { path = "../../library/globals" }

# Extern dependencies
spin = "0.10.0"