[package]
edition = "2024"
name = "terminal_emulator"
version = "0.1.0"
authors = ["Michael Schöttner <michael.schoettner@hhu.de>, Fabian Ruhland <ruhland@hhu.de>, Sebastian Keller <sebastian.keller@hhu.de>"]

[lib]
crate-type = ["staticlib"]
path = "src/terminal_emulator.rs"

[dependencies]
# Local dependencies
runtime = { path = "../../library/runtime" }
graphic = { path = "../../library/graphic" }
stream = { path = "../../library/stream" }
concurrent = { path = "../../library/concurrent" }
drawer = { path = "../../library/drawer" }
time = { path = "../../library/time" }
system_info = { path = "../../library/system_info" }
input = { path = "../../library/input" }
syscall = {path ="../../library/syscall"}
terminal = {path ="../../library/terminal"}
globals = {path ="../../library/globals"}

# Extern dependencies
anstyle-parse = "0.2.6"
chrono = { version = "0.4.34", default-features = false, features = ["alloc"] }
pc-keyboard = "0.8.0"
spin = "0.10.0"
uefi = "0.34.1"
num_enum = { version = "0.7", default-features = false }