[package]
edition = "2024"
name = "threadtest"
version = "0.1.0"
authors = ["Michael Schöttner <michael.schoettner@hhu.de>, Fabian Ruhland <ruhland@hhu.de>"]

[lib]
crate-type = ["staticlib"]
path = "src/multi.rs"

[dependencies]
# Local dependencies
runtime = { path = "../../library/runtime" }
terminal = { path = "../../library/terminal" }
concurrent = { path = "../../library/concurrent" }