cargo-features = ["edition2024"]

[package]
edition = "2024"
name = "uptime"
version = "0.1.0"
authors = ["Michael Schöttner <michael.schoettner@hhu.de>, Fabian Ruhland <ruhland@hhu.de>"]

[lib]
crate-type = ["staticlib"]
path = "src/uptime.rs"

[dependencies]
# Local dependencies
runtime = { path = "../../library/runtime" }
terminal = { path = "../../library/terminal" }
time = { path = "../../library/time" }