[package]
edition = "2021"
name = "window_manager"
version = "0.1.0"
authors = ["Artur Herdt"]

[lib]
crate-type = ["staticlib"]
path = "src/window_manager.rs"

[dependencies]
# Local dependencies
runtime = { path = "../../library/runtime" }
io = { path = "../../library/io" }
concurrent = { path = "../../library/concurrent" }
drawer = { path = "../../library/drawer" }
graphic = { path = "../../library/graphic" }

hashbrown = "0.14.5"