[package]
edition = "2021"
name = "window_manager"
version = "0.1.0"
authors = ["Artur Herdt"]

[lib]
crate-type = ["staticlib"]
path = "src/window_manager.rs"

[dependencies]
# Local dependencies
runtime = { path = "../../library/runtime" }
io = { path = "../../library/io" }
concurrent = { path = "../../library/concurrent" }
drawer = { path = "../../library/drawer" }
graphic = { path = "../../library/graphic" }
time = { path = "../../library/time" }

hashbrown = "0.14.5"
spin = "0.9.8"
nolock = { version = "0.4.1", default-features = false, features = ["queues"] }