[package]
edition = "2021"
name = "wm_comp"
version = "0.1.0"
authors = ["Artur Herdt"]

[lib]
crate-type = ["staticlib"]
path = "src/wm_comp.rs"

[dependencies]
# Local dependencies
runtime = { path = "../../library/runtime" }
io = { path = "../../library/io" }
concurrent = { path = "../../library/concurrent" }
drawer = { path = "../../library/drawer" }
graphic = { path = "../../library/graphic" }