[package]
edition = "2024"
name = "ibstat"
version = "0.1.0"
authors = [ "Sandro Jose Leal Miudo" ]

[lib]
crate-type = ["staticlib"]

[dependencies]
# Local dependencies
runtime = { path = "../../../library/runtime" }
terminal = { path = "../../../library/terminal" }
rdma-core = { path = "../../../usr/rdma-core" }